--- a/templates/Gemfile
+++ b/templates/Gemfile
@@ -1,6 +1,8 @@
 source "https://rubygems.org"
 
-gem "rails", "5.1.0"
+gem "rails", "5.2.0"
+gem "bootsnap"
+
 group :development, :test do
   gem "byebug" # Comes standard with Rails
 end
