--- a/templates/Gemfile
+++ b/templates/Gemfile
@@ -9,6 +9,6 @@ end
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
-  gem "web-console", "~> 2.0"
-  gem 'listen', '~> 3.1', '>= 3.1.5'
+  gem "web-console"
+  gem "listen"
 end
